--- a/docs/references.bib
+++ b/docs/references.bib
@@ -19,3 +19,10 @@
   year      = {2020},
   publisher = {Cambridge university press}
 }
+
+@article{van1996matrix,
+  title   = {Matrix computations (Johns Hopkins studies in mathematical sciences)},
+  author  = {Van Loan, Charles F and Golub, G},
+  journal = {Matrix Computations},
+  year    = {1996}
+}
