updated files for svd, citations added, dataset added

--- a/docs/presentation.tex
+++ b/docs/presentation.tex
@@ -6,9 +6,11 @@
 \usefonttheme{professionalfonts}
 \setbeamertemplate{navigation symbols}{}
 \setbeamercolor{block title}{bg=title,fg=white}
-\setbeamercolor{block body}{bg=body,fg=black}
+\setbeamercolor{block body}{bg=body!40,fg=black}
 \setbeamertemplate{section in toc}[square]
 \setbeamertemplate{subsection in toc}[square]
+
+\usepackage{libertinus}
 
 \usepackage{bm}
 \usepackage{amsmath, amssymb}
@@ -125,7 +127,7 @@
 \end{frame}
 
 \section{References}
-\begin{frame}[noframenumbering]{References}
+\begin{frame}[allowframebreaks, noframenumbering]{References}
     \printbibliography
 \end{frame}
 
