--- a/docs/references.bib
+++ b/docs/references.bib
@@ -26,3 +26,17 @@
   journal = {Matrix Computations},
   year    = {1996}
 }
+
+@online{Synapse,
+  author = {SYNAPSE},
+  title  = {gene expression cancer RNA-Seq Data Set},
+  url    = {https://www.synapse.org/#!Synapse:syn4301332}
+}
+
+@misc{Dua:2019,
+  author      = {Dua, Dheeru and Graff, Casey},
+  year        = {2017},
+  title       = {{UCI} Machine Learning Repository},
+  url         = {http://archive.ics.uci.edu/ml},
+  institution = {University of California, Irvine, School of Information and Computer Sciences}
+} 
