test and presentation updated

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -27,10 +27,23 @@
   year    = {1996}
 }
 
-@online{Synapse,
-  author = {SYNAPSE},
-  title  = {gene expression cancer RNA-Seq Data Set},
-  url    = {https://www.synapse.org/#!Synapse:syn4301332}
+@inproceedings{10.1007/978-3-030-35249-3_76,
+  author    = {Y{\i}lmaz, Nevriye
+               and Sekeroglu, Boran},
+  editor    = {Aliev, Rafik A.
+               and Kacprzyk, Janusz
+               and Pedrycz, Witold
+               and Jamshidi, Mo
+               and Babanli, Mustafa B.
+               and Sadikoglu, Fahreddin M.},
+  title     = {Student Performance Classification Using Artificial Intelligence Techniques},
+  booktitle = {10th International Conference on Theory and Application of Soft Computing, Computing with Words and Perceptions - ICSCCW-2019},
+  year      = {2020},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {596--603},
+  abstract  = {Education has vital and increasing importance almost for all countries in order to accelerate their development. Well-educated persons provide more benefits to their countries and for that reason, classification of students' performance before they enter exams or taking courses is also gained an importance. Improvement of education quality must be performed during the active semester to improve students' personal performance to response this expectation. To provide this, some of the main indicators are students' personal information, educational preferences and family properties. In this paper, artificial intelligence techniques are applied to the questionnaire results that consists these main indicators, of three different courses of two faculties in order to classify students' final grade performances and to determine the most efficient machine learning algorithm for this task. Several experiments are performed and results suggests that Radial-Basis Function Neural Network can be used effectively for this and helps to classify student performance with accuracy of 70{\%}--88{\%}.},
+  isbn      = {978-3-030-35249-3}
 }
 
 @misc{Dua:2019,
