--- a/docs/presentation.tex
+++ b/docs/presentation.tex
@@ -400,4 +400,10 @@
     \printbibliography
 \end{frame}
 
+\begin{frame}{Quote}
+    \begin{quote}
+        \hfill "No problem can withstand the assault of sustained thinking."
+    \end{quote}
+    \hfill -- Voltaire
+\end{frame}
 \end{document}
